# Firewall

./: .coverage  .flake8  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  coverage.xml  docker-compose.yaml  loggingg.py  main.py  pre-commit  pyproject.toml  readme.md  requirements.txt  setup.py
Firewall-last/: requirements.txt
config/: rules.yaml  settings.yaml
configs/: exampleconfig.ini  improved_config.ini
examples/: advanced_usage.py  linux_server.ini  windows_workstation.ini
firewall/: connection_tracker.py  event_handler.py  firewall.py  malware.h5  network.py  packet.py  packet_filter.py  rule.py  rule_manager.py  threat_detection.py
firewall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
last_version/Firewall-last/: .editorconfig  pyproject.toml
last_version/Firewall-last/.github/ISSUE_TEMPLATE/: bug_report.md
last_version/Firewall-last/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
last_version/Firewall-last/src/: config.yaml  network_monitor.py
last_version/Firewall-last/tests/: test_firewall.py  test_intrusion_detection.py  test_qos_monitor.py
src/: action.py  condition.py  firewall.py  intrusion_detection.py  main.py  network_monitor.py  packet_processor.py  qos_monitor.py  rule.py
src/gpu/: agrpars.py  (+1 more)
tests/: __init__.py  test_cli_parser.py  test_enumerate.py  test_firewall.py  test_integration.py  test_intrusion_detection.py  test_ipaddr.py  test_network_monitor.py  test_set_firewall.py  test_shell.py  test_superset.py  test_validation.py  test_whiptail.py  test_windows_adapter.py
(+32 files in other folders)
