[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "firewall-system"
version = "1.0.0"
description = "Firewall System for network traffic filtering"
authors = ["Aleksandr"]

[tool.poetry.dependencies]
python = "^3.9"
blinker = "^1.6.2"
cffi = "^1.15.1"
click = "^8.1.3"
colorama = "^0.4.6"
cryptography = "^40.0.2"
Flask = "^2.3.2"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
logger = "^1.4"
MarkupSafe = "^2.1.2"
pycparser = "^2.21"
scapy = "^2.5.0"
Werkzeug = "^2.3.4"
scikit-learn = "^1.2.2"

